# Robotic_prac1

./: frames_2025-11-23_22.39.11.gv  full_urdf.txt
install/: local_setup.sh  setup.ps1  setup.sh
install/prac1_robot_description/lib/prac1_robot_description/: frame_id_converter_node  laser_scan_frame_id_converter_node
install/prac1_robot_description/share/prac1_robot_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/prac1_robot_description/share/prac1_robot_description/cmake/: prac1_robot_descriptionConfig.cmake
install/prac1_robot_description/share/prac1_robot_description/config/: gazebo.rviz  gz_bridge.yaml
install/prac1_robot_description/share/prac1_robot_description/launch/: display.launch.py  gazebo.launch.py
install/robot_description/lib/robot_description/: frame_id_converter_node  motor_command_node
install/robot_description/share/robot_description/: local_setup.sh  package.sh
install/robot_estimation/lib/robot_estimation/: cmd_vel_to_rpm  imu_bias_correction_node  lowpass_imu_node  motor_rpm_node  wheel_odometry_node
install/robot_estimation/share/robot_estimation/: package.sh  package.xml
log/: latest_build
prac1_robot_description/: CMakeLists.txt
prac1_robot_description/config/: gz_bridge.yaml
prac1_robot_description/launch/: gazebo.launch.py
prac1_robot_description/rviz/: display.rviz
prac1_robot_description/src/description/: robot.urdf
robot_description/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
robot_description/log/: latest_build
robot_description/rviz/: display.rviz
robot_description/src/description/: robot.urdf
robot_estimation/: CMakeLists.txt
robot_estimation/launch/: estimation.launch.py
robot_estimation/src/: cmd_vel_to_rpm.cpp  complementary_orientation_node.cpp  imu_bias_correction_node.cpp  imu_motion_odom_node.cpp  lowpass_imu_node.cpp  motor_rpm_node.cpp  wheel_odometry_node.cpp
(+16 files in other folders)
